# app/Http/Requests/AssignPermissionToRoleRequest.php
@@ -1,0 +1,47 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+class AssignPermissionToRoleRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'role_id' => [
+                'required',
+                'integer',
+                'exists:roles,id', 
+                Rule::notIn([1])
+            ],
+
+            'permissions' => [
+                'required',
+                'array',
+                'min:1'
+            ],
+
+            'permissions.*' => [
+                'integer',
+                'distinct',
+                'exists:permissions,id'
+            ],
+        ];
+    }
+}
