# app/Models/Permission.php
@@ -4,14 +4,21 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Attributes\WithoutTimestamps;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 #[WithoutTimestamps(false)]
+
 class Permission extends Model
 {
     public $timestamps = false;
     
-    public function roles()
+    public function roles(): BelongsToMany
     {
         return $this->belongsToMany(Role::class);
+    }
+
+    public function getPermissions(): array
+    {
+        return $this->query()->get()->toArray();
     }
 }
